force-app/main/default/objects/Enquiry_Event__e.object
<CustomObject>
    <description>An outbound Platform Event to notify external systems of changes to Enquiry records</description>
    <fields>
        <fullName>Contact_Person_Id__c</fullName>
        <label>Contact Person Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_External_Id__c</fullName>
        <label>Enquiry External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Number__c</fullName>
        <label>Enquiry Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Origin__c</fullName>
        <label>Enquiry Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Record_Type__c</fullName>
        <label>Enquiry Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Status__c</fullName>
        <label>Enquiry Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Enquiry Event</label>
    <pluralLabel>Enquiry Events</pluralLabel>
</CustomObject>